# sbwt-rs-cli

./: CHANGELOG.md  Cargo.toml  README.md
api/: CHANGELOG.md  Cargo.toml  README.md
api/src/: atomic_bitmap.rs  benchmark.rs  builder.rs  compact_int_vector.rs  dbg.rs  kmer.rs  lib.rs  merge.rs  sbwt.rs  sdsl_compatibility.rs  set_operations.rs  streaming_index.rs  subsetseq.rs  util.rs
api/src/bitpacked_kmer_sorting/: cursors.rs  dummies.rs  kmer_chunk.rs  kmer_splitter.rs  mod.rs
api/src/bitpacked_kmer_sorting_mem/: cursors.rs  dummies.rs  kmer_splitter.rs  mod.rs
api/src/set_operations/: common.rs  interleaving.rs  intersect_difference.rs  merge.rs
binomial_merge_pipeline/: build_661k.sh
src/: main.rs
