[package]
name = "sbwt-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.77" # 1.77 needed for File::create_new in sbwt

[[bin]]
name = "sbwt"
path = "src/main.rs"

[dependencies]
clap = "4.4"
jseqio = "0.1.2" 
sbwt = {path = "./api"}
env_logger = "0.10"
log = "0.4"
byteorder = "1.5"
chrono = "0.4"
